[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-pipe-comfyui"
version = "1.0.0"
description = "WarpPipe - A data bundling and transfer system for ComfyUI workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["comfyui", "custom-nodes", "workflow", "data-transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/warp_pipe-comfyui"
"Bug Reports" = "https://github.com/yourusername/warp_pipe-comfyui/issues"
"Source" = "https://github.com/yourusername/warp_pipe-comfyui"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

# ComfyUI Manager specific metadata
[tool.comfyui]
title = "WarpPipe Nodes"
reference = "https://github.com/yourusername/warp_pipe-comfyui"
files = ["warp_pipe.py", "__init__.py"]
install_type = "git-clone"
description = "WarpPipe nodes for bundling and transferring multiple data types between ComfyUI nodes"
