[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warppipe"
version = "3.0.1"
description = "WarpPipe - A data bundling and transfer system for ComfyUI workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "gregory-richard"}
]
keywords = ["comfyui", "custom-nodes", "workflow", "data-transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/gregory-richard/ComfyUI-WarpPipe"
"Homepage" = "https://github.com/gregory-richard/ComfyUI-WarpPipe"
"Bug Reports" = "https://github.com/gregory-richard/ComfyUI-WarpPipe/issues"
"Source" = "https://github.com/gregory-richard/ComfyUI-WarpPipe"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.py"]

# ComfyUI Registry metadata
[tool.comfy]
PublisherId = "gregrichrd"
DisplayName = "WarpPipe Nodes"
Icon = "https://raw.githubusercontent.com/gregory-richard/ComfyUI-WarpPipe/main/icon.png"
